# QLanguage

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  check_bits.cmake  test.txt  warning2error.cmake
Calculator/: CMakeLists.txt  Calculator.ParserTable  Calculator.cpp  Calculator.x86.ParserTable
Calculator/Parser/: Parser.cpp  Parser.h  ParserTable.cpp  ParserTable.h
Demos/: normal.txt
Documents/: FileDispatcher.doc  Library.doc  QLanguage指令集.doc  内存池性能分析报告.txt  性能分析报告.xls  编码规范.doc
FileDispatcher/: FileInfoWidget.h  FileList.h  MainWindow.cpp  Page.cpp
GeneratorFiles/: Calculator.txt  NewQLanguage.txt  QLanguage.txt  QParserGenerator.txt  Test.txt
Models/: Parser.cpp  Parser.h  ParserTable.cpp  ParserTable.h
OS/: Makefile  bochsrc.bxrc  head.asm  head.ld  kernel.ld  main.asm  os.bin.bat
OS/src/boot/: boot.asm  head.asm
OS/src/init/: init.cpp
OS/tools/: make_bin.cpp
Other/: 进度计划表.xls
Other/VS2012/: QLanguage.natvis
QCore/: CMakeLists.txt  QCore.cpp
QCoreUnitTest/: CMakeLists.txt  QCoreUnitTest.cpp
QCoreUnitTest/Units/: TestBase.cpp  TestBase.h  TestCombinator.cpp  TestCombinator.h  TestHashMap.cpp  TestHashMap.h  TestHashSet.cpp  TestHashSet.h  TestHashTable.cpp  TestHashTable.h  TestList.cpp  TestList.h  TestMap.cpp  TestMap.h  TestMemoryPool.cpp  TestMemoryPool.h  TestRBTree.cpp  TestRBTree.h  TestRegex.cpp  TestRegex.h  TestSet.cpp  TestSet.h  TestStream.cpp  TestStream.h  TestString.cpp  TestString.h  TestTraits.cpp  TestTraits.h  TestVecotr.cpp  TestVector.h
QLanguage/: CMakeLists.txt  QLanguage.ParserTable  QLanguage.cpp  QLanguage.x64.ParserTable  QLanguage.x86.ParserTable  Rules.txt
QLanguage/Lexer/: Lexer.cpp  Lexer.h
QLanguage/Parser/: BasicParser.h  LALR1.cpp  LALR1.h  LALR1ParserTable.cpp  LR0.cpp  LR0.h  LRProduction.cpp  LRProduction.h  Parser.cpp  Parser.h  ParserTable.cpp  Production.cpp  Production.h
QLanguage/Parser/SyntaxTree/: SyntaxTree_Assign.cpp  SyntaxTree_Assign.h  SyntaxTree_Attribute.cpp  SyntaxTree_Attribute.h  SyntaxTree_Base.h  SyntaxTree_Block.cpp  SyntaxTree_Block.h  SyntaxTree_Class.cpp  SyntaxTree_Class.h  SyntaxTree_ClassContent.cpp  SyntaxTree_ClassContent.h  SyntaxTree_ClassContentList.cpp  SyntaxTree_ClassContentList.h  SyntaxTree_ClassInherit.cpp  SyntaxTree_ClassInherit.h  SyntaxTree_ClassName.cpp  SyntaxTree_ClassName.h  SyntaxTree_DeclareName.cpp  SyntaxTree_DeclareName.h  SyntaxTree_Do.cpp  SyntaxTree_Do.h  SyntaxTree_Exp.cpp  SyntaxTree_Exp.h  SyntaxTree_For.cpp  SyntaxTree_For.h  SyntaxTree_Function.cpp  SyntaxTree_Function.h  SyntaxTree_FunctionDeclare.cpp  SyntaxTree_FunctionDeclare.h  SyntaxTree_GlobalFunction.cpp  SyntaxTree_GlobalFunction.h  SyntaxTree_Interface.cpp  SyntaxTree_Interface.h  SyntaxTree_InterfaceContentList.cpp  SyntaxTree_InterfaceContentList.h  SyntaxTree_Item.cpp  SyntaxTree_Item.h  SyntaxTree_ItemList.cpp  SyntaxTree_ItemList.h  SyntaxTree_MemberList.cpp  (+21 more)
QParserGenerator/: CMakeLists.txt  QParserGenerator.cpp  README
QParserGenerator/Parser/: Parser.cpp  Parser.h
Source/: CMakeLists.txt  check_bits.cmake  warning2error.cmake
Source/Calculator/: CMakeLists.txt  Calculator.ParserTable  Calculator.cpp  Calculator.x64.ParserTable
Source/Calculator/Parser/: Parser.h  ParserTable.cpp  ParserTable.h
Source/FileDispatcher/: CMakeLists.txt  FileInfoWidget.cpp  FileList.cpp  MainWindow.h  Page.h  main.cpp
Source/FileDispatcher/Data/: DataManager.cpp  DataManager.h
Source/FileDispatcher/Gui/: FileInfoWidget.cpp  FileInfoWidget.h  Page.h
Source/OS/: boot.ld
Source/QCore/: CMakeLists.txt
Source/QCoreUnitTest/: CMakeLists.txt  QCoreUnitTest.cpp
Source/QCoreUnitTest/Units/: TestBase.cpp  TestBase.h  TestCombinator.cpp  TestCombinator.h  TestHashMap.cpp  TestHashSet.cpp  TestHashSet.h  TestHashTable.cpp  TestHashTable.h  TestList.cpp  TestMap.cpp  TestMap.h  TestMemoryPool.cpp  TestRBTree.cpp  TestSet.cpp  TestStream.cpp  TestString.cpp  TestTraits.cpp  TestTraits.h  TestVecotr.cpp  TestVector.h
Source/QLanguage/: CMakeLists.txt  QLanguage.ParserTable  QLanguage.cpp  QLanguage.x64.ParserTable  QLanguage.x86.ParserTable  Rules.txt
Source/QLanguage/Lexer/: Lexer.cpp  Lexer.h
Source/QLanguage/Parser/: BasicParser.cpp  LALR1.cpp  LALR1.h  LALR1ParserTable.cpp  LR0.cpp  LR0.h  LRProduction.cpp  LRProduction.h  Parser.cpp  Parser.h  ParserTable.cpp  ParserTable.h  Production.h
Source/QLanguage/Parser/SyntaxTree/: README  SyntaxTree_ArrayLst.cpp  SyntaxTree_ArrayLst.h  SyntaxTree_ArrayValue.cpp  SyntaxTree_ArrayValue.h  SyntaxTree_Assign.cpp  SyntaxTree_Assign.h  SyntaxTree_Attribute.cpp  SyntaxTree_Attribute.h  SyntaxTree_Base.cpp  SyntaxTree_Base.h  SyntaxTree_Block.cpp  SyntaxTree_Block.h  SyntaxTree_Break.cpp  SyntaxTree_Break.h  SyntaxTree_Call.cpp  SyntaxTree_Call.h  SyntaxTree_CallList.cpp  SyntaxTree_CallList.h  SyntaxTree_Class.cpp  SyntaxTree_Class.h  SyntaxTree_ClassContent.cpp  SyntaxTree_ClassContent.h  SyntaxTree_ClassContentList.cpp  SyntaxTree_ClassContentList.h  SyntaxTree_ClassInherit.cpp  SyntaxTree_ClassInherit.h  SyntaxTree_ClassName.cpp  SyntaxTree_ClassName.h  SyntaxTree_Continue.cpp  SyntaxTree_Continue.h  SyntaxTree_DeclareList.cpp  SyntaxTree_DeclareList.h  SyntaxTree_DeclareName.cpp  SyntaxTree_DeclareName.h  SyntaxTree_Do.cpp  SyntaxTree_Do.h  SyntaxTree_Else.cpp  SyntaxTree_Else.h  SyntaxTree_Exp.cpp  (+58 more)
Source/QLanguage/VirtualMachine/: Variant.cpp  Variant.h  Variant_Ext.cpp  opcodes.h
Source/QParserGenerator/: CMakeLists.txt  QParserGenerator.cpp  README
Source/QParserGenerator/Parser/: Parser.cpp  Parser.h
Source/WordSegmentation/: CMakeLists.txt  WordSegmentation.cpp
Tools/: makebinary.sh  update.sh
Tools/DEB/: makebinary.sh
Tools/QLanguage/DEB/: control  makeall.sh  makedeb.sh
Tools/QLanguage/RPM/: QLanguage.spec  rpm_package.sh
Tools/QParserGenerator/DEB/: QParserGenerator_Deb_AMD64.deb  control  makeall.sh  makedeb.sh
Tools/RPM/: rpm_package.sh
VS2012/: QLanguage.natvis
WordSegmentation/: CMakeLists.txt  WordSegmentation.cpp
WordSegmentation/Common/: LexicographicTreeNode.h
(+4 files in other folders)
