
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(QCoreUnitTest)

IF(NOT CMAKE_GENERATOR MATCHES "Visual Studio")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
ADD_DEFINITIONS(-fpermissive)
SET(CMAKE_CXX_FLAGS "-Wno-write-strings")
ENDIF(NOT CMAKE_GENERATOR MATCHES "Visual Studio")

IF(CMAKE_SYSTEM_NAME STREQUAL "Windows")
FILE(GLOB VLD_Headers "../QCore/vld/*.h")
FILE(GLOB VLD_Sources "../QCore/vld/*.cpp")
SET (VLD ${VLD_Headers} ${VLD_Sources})
SOURCE_GROUP(vld FILES ${VLD})
ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Windows")

IF(CMAKE_SYSTEM_NAME STREQUAL "Windows")
SET (FILES
    ${VLD}
)
ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Windows")

FILE(GLOB Units_Headers "Units/*.h")
FILE(GLOB Units_Sources "Units/*.cpp")
SET (Units ${Units_Headers} ${Units_Sources})
SOURCE_GROUP(Units FILES ${Units})

LIST (APPEND FILES
	${Units}
	QCoreUnitTest.cpp
)

SET(CMAKE_C_FLAGS_DEBUG_INIT "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1") 
SET(CMAKE_C_FLAGS_MINSIZEREL_INIT "/MT /O1 /Ob1 /D NDEBUG") 
SET(CMAKE_C_FLAGS_RELEASE_INIT "/MT /O2 /Ob2 /D NDEBUG") 
SET(CMAKE_C_FLAGS_RELWITHDEBINFO_INIT "/MT /Zi /W4 /O2 /Ob1 /D NDEBUG")

ADD_EXECUTABLE(QCoreUnitTest ${FILES})

TARGET_LINK_LIBRARIES(QCoreUnitTest QCore)

SUBDIRS(../QCore)
ADD_DEPENDENCIES(QCoreUnitTest QCore)
