
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(QCoreUnitTest)

SET(DEBUG_LEVEL "3" CACHE STRING "1;2;3")
SET(ENABLE_SPEED_TEST ON CACHE BOOL ON)

IF(NOT MSVC)
	SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
	ADD_DEFINITIONS(-DGNUC)
ELSE()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX")
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
	ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
	ADD_DEFINITIONS(-DMSVC)
ENDIF(NOT MSVC)

ADD_DEFINITIONS(-DDEBUG_LEVEL=${DEBUG_LEVEL})

IF (ENABLE_SPEED_TEST)
	ADD_DEFINITIONS(-DTEST_SPEED)
ENDIF ()

FILE(GLOB Units_Headers "Units/*.h")
FILE(GLOB Units_Sources "Units/*.cpp")
SET (Units ${Units_Headers} ${Units_Sources})
SOURCE_GROUP(Units FILES ${Units})

LIST (APPEND FILES
	${Units}
	QCoreUnitTest.cpp
)

SET(CMAKE_CXX_FLAGS_DEBUG_INIT "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1 -D_DEBUG") 
SET(CMAKE_CXX_FLAGS_MINSIZEREL_INIT "/MT /O1 /Ob1 /D NDEBUG") 
SET(CMAKE_CXX_FLAGS_RELEASE_INIT "/MT /O2 /Ob2 /D NDEBUG") 
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT "/MT /Zi /W4 /O2 /Ob1 /D NDEBUG")

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")

ADD_EXECUTABLE(QCoreUnitTest ${FILES})

TARGET_LINK_LIBRARIES(QCoreUnitTest QCore)

#SET_TARGET_PROPERTIES(QCoreUnitTest PROPERTIES COMPILE_FLAGS "-save-temps") 

SUBDIRS(../QCore)
ADD_DEPENDENCIES(QCoreUnitTest QCore)
